--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,18 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
+    namespace 'com.example.imagegallerysaver'
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'  // Match with the Java version
+    }
+
+    
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
